tbd-text class is no longer align-items center

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -17,7 +17,7 @@
 .tmbd-text {
     display: flex;  
     flex-direction: column; 
-    align-items: center;
+    /* align-items: center; */
     margin: 0 15px;
 }
 
